--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "gulp-uglifycss": "^1.0.6",
     "gulp-util": "^3.0.7",
     "minimist": "^1.2.0",
-    "vinyl-ftp": "^0.4.5"
+    "surge": "^0.18.0"
   }
 }
