--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "gulp-util": "^3.0.7",
     "minimist": "^1.2.0",
     "surge": "^0.19.0"
+  },
+  "dependencies": {
+    "bootstrap-sass": "^3.3.7"
   }
 }
