--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "type": "git",
     "url": "https://github.com/themihel/themihel.me"
   },
+  "devDependencies": {
+    "critical": "^1.3.4",
+    "gulp": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-size": "^3.0.0",
+    "gulp-util": "^3.0.7"
+  },
   "dependencies": {
     "bootstrap-sass": "^3.3.7"
   }
