--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.13.3",
+    "dotenv": "^10.0.0",
     "gatsby": "^4.1.1",
+    "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.1",
     "gatsby-plugin-styled-components": "^5.1.0",
+    "gatsby-source-sanity": "^7.1.0",
+    "gatsby-transformer-sharp": "^4.1.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.3"
   },
