--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.13.3",
     "dotenv": "^10.0.0",
     "gatsby": "^4.1.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.1",
