--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^10.0.0",
     "gatsby": "^4.1.1",
     "gatsby-plugin-image": "^2.1.1",
+    "gatsby-plugin-manifest": "^4.1.3",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.2",
     "gatsby-plugin-styled-components": "^5.1.0",
