--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,11 @@
  
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
+
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
+
+  [plugins.inputs.thresholds]
+    accessibility = 0.9
+    best-practices = 0.9
+    seo = 0.9
