--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "gatsby": "^4.1.1",
     "gatsby-plugin-image": "^2.1.1",
     "gatsby-plugin-manifest": "^4.1.3",
+    "gatsby-plugin-preact": "^6.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.2",
     "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-source-sanity": "^7.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "normalize.css": "^8.0.1",
+    "preact": "^10.5.15",
+    "preact-render-to-string": "^5.1.19",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
