--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,7 @@
   package = "@netlify/plugin-lighthouse"
 
   [plugins.inputs.thresholds]
+    performance = 0.9
     accessibility = 0.9
     best-practices = 0.9
     seo = 0.9
