--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.2",
     "gatsby-plugin-styled-components": "^5.1.0",
+    "gatsby-source-filesystem": "^4.1.2",
     "gatsby-source-sanity": "^7.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "normalize.css": "^8.0.1",
