--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-manifest": "^4.1.3",
     "gatsby-plugin-preact": "^6.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^4.1.2",
     "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.2",
