--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "netlify": "netlify dev"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^3.0.0",
     "babel-plugin-styled-components": "^1.13.3",
     "dotenv": "^10.0.0",
     "gatsby": "^4.1.1",
