--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^4.1.1",
     "gatsby-plugin-image": "^2.1.1",
     "gatsby-plugin-manifest": "^4.1.3",
+    "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-preact": "^6.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-react-svg": "^3.1.0",
