--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
+    "gatsby-plugin-simple-analytics": "^1.0.4",
     "prettier": "^2.4.1"
   }
 }
